# caos-lectures

./: Makefile  README.md  book.toml
lectures/: Makefile  book.toml
lectures/cpuinternals/: summator-with-latch.drawio  summator.drawio
lectures/notion/: lectures aa24b7b7883f4883b13c59c0ba535263.md
lectures/notion/lectures aa24b7b7883f4883b13c59c0ba535263/: computers 7366cc007c3c42a582a039ae5f4856e8.md  (+6 more)
lectures/src/: 01-course.md  02-computers.md  03-integers.md  04-assembly.md  05-jumps.md  05-nand2cpu.md  06-nand2cpu.md  07-memory.md  08-call-ret.md  SUMMARY.md
src/: 01-course.md  04-assembly.md  05-jumps.md  06-nand2cpu.md  07-memory.md  SUMMARY.md
src/08-call-ret/: 08-call-ret.md
src/10-c/: index.md
src/11-c-continued/: index.md
src/18-floating-point-arithmetic/: index.md
src/18-x86-floating-point/: index.md
src/21-signals/: index.md
src/22-sockets/: Makefile  index.md  syscalls.txt
src/23-mplex/: echo-epoll.c  echo-fork.c  epoll.c  listener.h  mplex.md
src/26-parallel-2/: index.md
src/dynamic-linking/: index.md
src/exam/: exam.md
src/gpu/: gpu.md
src/hardware/: ram-and-cache.md
src/ipr/: build.md  git.md
src/ipr/test/code/: CMakeLists.txt
src/ipr/test/code/.github/workflows/: ci.yml
src/ipr/test/code/src/: dumbfunction.c  dumbfunction.h  main.c
src/ipr/test/code/tests/: CMakeLists.txt  test.c
src/locale/: Makefile  run.sh  setlocale.c
src/nand2cpu/: triggers.circ
src/posix/: index.md
src/pthreads/: Makefile  attr.c  queue-stop.c  queue.c  threads.c
src/x1-cpu-internals/: index.md
src/yabloko/: index.md
(+89 files in other folders)
